--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "1.0.10"
   },
   "dependencies": {
+    "d3": "^4.10.0",
     "lodash.uniq": "^4.5.0",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-datepicker": "^0.52.0",
     "react-dom": "^15.6.1",
     "react-select": "^1.0.0-rc.5"
   },
